// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`notificationTypes renders for JOIN_CHALLENGE 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#007398",
        "flex": 1,
        "justifyContent": "center",
        "paddingHorizontal": 40,
      },
      Object {},
    ]
  }
>
  <View
    style={
      Array [
        Object {},
        Object {
          "flex": 0.3,
        },
      ]
    }
  />
  <View
    style={
      Array [
        Object {},
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {},
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          },
        ]
      }
    >
      <Image
        source={
          Object {
            "testUri": "../../../assets/images/notificationPrimer.png",
          }
        }
      />
    </View>
    <View
      style={
        Array [
          Object {},
          Object {
            "alignItems": "center",
            "flex": 0.6,
            "justifyContent": "center",
          },
        ]
      }
    >
      <Text
        style={
          Object {
            "color": "#ffffff",
            "fontFamily": "SourceSansPro-Regular",
            "fontSize": 16,
            "fontStyle": "normal",
            "fontWeight": "normal",
            "lineHeight": 24,
            "paddingTop": 15,
            "textAlign": "center",
            "textAlignVertical": "center",
            "textTransform": "none",
          }
        }
      >
        We are excited that you are participating in a challenge! MissionHub would like to send you updates about this challenge.
      </Text>
    </View>
    <View
      style={
        Array [
          Object {},
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          },
        ]
      }
    >
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#3CC8E6",
            "borderRadius": 50,
            "height": 48,
            "justifyContent": "center",
            "margin": 8,
            "opacity": 1,
            "width": 680,
          }
        }
        testID="AllowButton"
      >
        <Text
          style={
            Array [
              Object {
                "color": "#ffffff",
                "fontFamily": "SourceSansPro-Regular",
                "fontSize": 14,
                "fontStyle": "normal",
                "fontWeight": "bold",
                "letterSpacing": 1,
                "lineHeight": 18,
                "textAlign": "center",
                "textAlignVertical": "center",
                "textTransform": "uppercase",
              },
              Object {
                "color": "#ffffff",
                "fontFamily": "SourceSansPro-Regular",
                "fontSize": 14,
                "fontStyle": "normal",
                "fontWeight": "bold",
                "letterSpacing": 1.5,
                "lineHeight": 18,
                "textAlignVertical": "center",
                "textTransform": "uppercase",
              },
            ]
          }
        >
          ALLOW NOTIFICATIONS
        </Text>
      </View>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "transparent",
            "borderColor": "#3CC8E6",
            "borderRadius": 50,
            "borderWidth": 1,
            "height": 48,
            "justifyContent": "center",
            "margin": 8,
            "opacity": 1,
            "paddingHorizontal": 20,
            "paddingVertical": 10,
            "width": 680,
          }
        }
        testID="NotNowButton"
      >
        <Text
          style={
            Array [
              Object {
                "color": "#ffffff",
                "fontFamily": "SourceSansPro-Regular",
                "fontSize": 14,
                "fontStyle": "normal",
                "fontWeight": "bold",
                "letterSpacing": 1,
                "lineHeight": 18,
                "textAlign": "center",
                "textAlignVertical": "center",
                "textTransform": "uppercase",
              },
              Object {
                "color": "#ffffff",
                "fontFamily": "SourceSansPro-Regular",
                "fontSize": 14,
                "fontStyle": "normal",
                "fontWeight": "bold",
                "letterSpacing": 1.5,
                "lineHeight": 18,
                "textAlignVertical": "center",
                "textTransform": "uppercase",
              },
            ]
          }
        >
          NOT NOW
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      Array [
        Object {},
        Object {
          "flex": 0.3,
        },
      ]
    }
  />
</View>
`;

exports[`notificationTypes renders for JOIN_COMMUNITY 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#007398",
        "flex": 1,
        "justifyContent": "center",
        "paddingHorizontal": 40,
      },
      Object {},
    ]
  }
>
  <View
    style={
      Array [
        Object {},
        Object {
          "flex": 0.3,
        },
      ]
    }
  />
  <View
    style={
      Array [
        Object {},
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {},
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          },
        ]
      }
    >
      <Image
        source={
          Object {
            "testUri": "../../../assets/images/notificationPrimer.png",
          }
        }
      />
    </View>
    <View
      style={
        Array [
          Object {},
          Object {
            "alignItems": "center",
            "flex": 0.6,
            "justifyContent": "center",
          },
        ]
      }
    >
      <Text
        style={
          Object {
            "color": "#ffffff",
            "fontFamily": "SourceSansPro-Regular",
            "fontSize": 16,
            "fontStyle": "normal",
            "fontWeight": "normal",
            "lineHeight": 24,
            "paddingTop": 15,
            "textAlign": "center",
            "textAlignVertical": "center",
            "textTransform": "none",
          }
        }
      >
        MissionHub would like to notify you about activity happening within your community.
      </Text>
    </View>
    <View
      style={
        Array [
          Object {},
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          },
        ]
      }
    >
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#3CC8E6",
            "borderRadius": 50,
            "height": 48,
            "justifyContent": "center",
            "margin": 8,
            "opacity": 1,
            "width": 680,
          }
        }
        testID="AllowButton"
      >
        <Text
          style={
            Array [
              Object {
                "color": "#ffffff",
                "fontFamily": "SourceSansPro-Regular",
                "fontSize": 14,
                "fontStyle": "normal",
                "fontWeight": "bold",
                "letterSpacing": 1,
                "lineHeight": 18,
                "textAlign": "center",
                "textAlignVertical": "center",
                "textTransform": "uppercase",
              },
              Object {
                "color": "#ffffff",
                "fontFamily": "SourceSansPro-Regular",
                "fontSize": 14,
                "fontStyle": "normal",
                "fontWeight": "bold",
                "letterSpacing": 1.5,
                "lineHeight": 18,
                "textAlignVertical": "center",
                "textTransform": "uppercase",
              },
            ]
          }
        >
          ALLOW NOTIFICATIONS
        </Text>
      </View>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "transparent",
            "borderColor": "#3CC8E6",
            "borderRadius": 50,
            "borderWidth": 1,
            "height": 48,
            "justifyContent": "center",
            "margin": 8,
            "opacity": 1,
            "paddingHorizontal": 20,
            "paddingVertical": 10,
            "width": 680,
          }
        }
        testID="NotNowButton"
      >
        <Text
          style={
            Array [
              Object {
                "color": "#ffffff",
                "fontFamily": "SourceSansPro-Regular",
                "fontSize": 14,
                "fontStyle": "normal",
                "fontWeight": "bold",
                "letterSpacing": 1,
                "lineHeight": 18,
                "textAlign": "center",
                "textAlignVertical": "center",
                "textTransform": "uppercase",
              },
              Object {
                "color": "#ffffff",
                "fontFamily": "SourceSansPro-Regular",
                "fontSize": 14,
                "fontStyle": "normal",
                "fontWeight": "bold",
                "letterSpacing": 1.5,
                "lineHeight": 18,
                "textAlignVertical": "center",
                "textTransform": "uppercase",
              },
            ]
          }
        >
          NOT NOW
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      Array [
        Object {},
        Object {
          "flex": 0.3,
        },
      ]
    }
  />
</View>
`;

exports[`notificationTypes renders for LOGIN 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#007398",
        "flex": 1,
        "justifyContent": "center",
        "paddingHorizontal": 40,
      },
      Object {},
    ]
  }
>
  <View
    style={
      Array [
        Object {},
        Object {
          "flex": 0.3,
        },
      ]
    }
  />
  <View
    style={
      Array [
        Object {},
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {},
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          },
        ]
      }
    >
      <Image
        source={
          Object {
            "testUri": "../../../assets/images/notificationPrimer.png",
          }
        }
      />
    </View>
    <View
      style={
        Array [
          Object {},
          Object {
            "alignItems": "center",
            "flex": 0.6,
            "justifyContent": "center",
          },
        ]
      }
    >
      <Text
        style={
          Object {
            "color": "#ffffff",
            "fontFamily": "SourceSansPro-Regular",
            "fontSize": 16,
            "fontStyle": "normal",
            "fontWeight": "normal",
            "lineHeight": 24,
            "paddingTop": 15,
            "textAlign": "center",
            "textAlignVertical": "center",
            "textTransform": "none",
          }
        }
      >
        We noticed you have accepted some steps. We'd like to send you handcrafted reminders so they don't get forgotten.
      </Text>
    </View>
    <View
      style={
        Array [
          Object {},
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          },
        ]
      }
    >
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#3CC8E6",
            "borderRadius": 50,
            "height": 48,
            "justifyContent": "center",
            "margin": 8,
            "opacity": 1,
            "width": 680,
          }
        }
        testID="AllowButton"
      >
        <Text
          style={
            Array [
              Object {
                "color": "#ffffff",
                "fontFamily": "SourceSansPro-Regular",
                "fontSize": 14,
                "fontStyle": "normal",
                "fontWeight": "bold",
                "letterSpacing": 1,
                "lineHeight": 18,
                "textAlign": "center",
                "textAlignVertical": "center",
                "textTransform": "uppercase",
              },
              Object {
                "color": "#ffffff",
                "fontFamily": "SourceSansPro-Regular",
                "fontSize": 14,
                "fontStyle": "normal",
                "fontWeight": "bold",
                "letterSpacing": 1.5,
                "lineHeight": 18,
                "textAlignVertical": "center",
                "textTransform": "uppercase",
              },
            ]
          }
        >
          ALLOW NOTIFICATIONS
        </Text>
      </View>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "transparent",
            "borderColor": "#3CC8E6",
            "borderRadius": 50,
            "borderWidth": 1,
            "height": 48,
            "justifyContent": "center",
            "margin": 8,
            "opacity": 1,
            "paddingHorizontal": 20,
            "paddingVertical": 10,
            "width": 680,
          }
        }
        testID="NotNowButton"
      >
        <Text
          style={
            Array [
              Object {
                "color": "#ffffff",
                "fontFamily": "SourceSansPro-Regular",
                "fontSize": 14,
                "fontStyle": "normal",
                "fontWeight": "bold",
                "letterSpacing": 1,
                "lineHeight": 18,
                "textAlign": "center",
                "textAlignVertical": "center",
                "textTransform": "uppercase",
              },
              Object {
                "color": "#ffffff",
                "fontFamily": "SourceSansPro-Regular",
                "fontSize": 14,
                "fontStyle": "normal",
                "fontWeight": "bold",
                "letterSpacing": 1.5,
                "lineHeight": 18,
                "textAlignVertical": "center",
                "textTransform": "uppercase",
              },
            ]
          }
        >
          NOT NOW
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      Array [
        Object {},
        Object {
          "flex": 0.3,
        },
      ]
    }
  />
</View>
`;

exports[`notificationTypes renders for ONBOARDING 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#007398",
        "flex": 1,
        "justifyContent": "center",
        "paddingHorizontal": 40,
      },
      Object {},
    ]
  }
>
  <View
    style={
      Array [
        Object {},
        Object {
          "flex": 0.3,
        },
      ]
    }
  />
  <View
    style={
      Array [
        Object {},
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "marginBottom": 88,
          },
          Object {
            "alignItems": "center",
            "flex": 0.6,
            "justifyContent": "center",
          },
        ]
      }
    >
      <View>
        <Text
          style={
            Object {
              "color": "#ffffff",
              "fontFamily": "SourceSansPro-Regular",
              "fontSize": 24,
              "fontStyle": "normal",
              "fontWeight": "normal",
              "lineHeight": 30,
              "textAlign": "center",
              "textAlignVertical": "center",
              "textTransform": "none",
            }
          }
        >
          Allow notifications for
        </Text>
        <Text
          style={
            Object {
              "color": "#ffffff",
              "fontFamily": "SourceSansPro-Regular",
              "fontSize": 24,
              "fontStyle": "normal",
              "fontWeight": "normal",
              "lineHeight": 30,
              "textAlign": "center",
              "textAlignVertical": "center",
              "textTransform": "none",
            }
          }
        >
          reminders on steps of faith
        </Text>
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "marginBottom": 88,
          },
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          },
        ]
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "justifyContent": "center",
          }
        }
      >
        <Image
          source={
            Object {
              "testUri": "../../../assets/images/notificationPrimerScreen.png",
            }
          }
        />
        <Image
          source={
            Object {
              "testUri": "../../../assets/images/notificationPrimerNotif.png",
            }
          }
          style={
            Object {
              "position": "absolute",
              "top": "50%",
            }
          }
        />
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "marginBottom": -50,
            "paddingTop": 20,
          },
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          },
        ]
      }
    >
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#3CC8E6",
            "borderRadius": 50,
            "height": 48,
            "justifyContent": "center",
            "margin": 8,
            "opacity": 1,
            "width": 680,
          }
        }
        testID="AllowButton"
      >
        <Text
          style={
            Array [
              Object {
                "color": "#ffffff",
                "fontFamily": "SourceSansPro-Regular",
                "fontSize": 14,
                "fontStyle": "normal",
                "fontWeight": "bold",
                "letterSpacing": 1,
                "lineHeight": 18,
                "textAlign": "center",
                "textAlignVertical": "center",
                "textTransform": "uppercase",
              },
              Object {
                "color": "#ffffff",
                "fontFamily": "SourceSansPro-Regular",
                "fontSize": 14,
                "fontStyle": "normal",
                "fontWeight": "bold",
                "letterSpacing": 1.5,
                "lineHeight": 18,
                "textAlignVertical": "center",
                "textTransform": "uppercase",
              },
            ]
          }
        >
          ALLOW NOTIFICATIONS
        </Text>
      </View>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "transparent",
            "borderColor": "#3CC8E6",
            "borderRadius": 50,
            "borderWidth": 1,
            "height": 48,
            "justifyContent": "center",
            "margin": 8,
            "opacity": 1,
            "paddingHorizontal": 20,
            "paddingVertical": 10,
            "width": 680,
          }
        }
        testID="NotNowButton"
      >
        <Text
          style={
            Array [
              Object {
                "color": "#ffffff",
                "fontFamily": "SourceSansPro-Regular",
                "fontSize": 14,
                "fontStyle": "normal",
                "fontWeight": "bold",
                "letterSpacing": 1,
                "lineHeight": 18,
                "textAlign": "center",
                "textAlignVertical": "center",
                "textTransform": "uppercase",
              },
              Object {
                "color": "#ffffff",
                "fontFamily": "SourceSansPro-Regular",
                "fontSize": 14,
                "fontStyle": "normal",
                "fontWeight": "bold",
                "letterSpacing": 1.5,
                "lineHeight": 18,
                "textAlignVertical": "center",
                "textTransform": "uppercase",
              },
            ]
          }
        >
          NOT NOW
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      Array [
        Object {},
        Object {
          "flex": 0.3,
        },
      ]
    }
  />
</View>
`;

exports[`notificationTypes renders for SET_REMINDER 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#007398",
        "flex": 1,
        "justifyContent": "center",
        "paddingHorizontal": 40,
      },
      Object {},
    ]
  }
>
  <View
    style={
      Array [
        Object {},
        Object {
          "flex": 0.3,
        },
      ]
    }
  />
  <View
    style={
      Array [
        Object {},
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {},
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          },
        ]
      }
    >
      <Image
        source={
          Object {
            "testUri": "../../../assets/images/notificationPrimer.png",
          }
        }
      />
    </View>
    <View
      style={
        Array [
          Object {},
          Object {
            "alignItems": "center",
            "flex": 0.6,
            "justifyContent": "center",
          },
        ]
      }
    >
      <Text
        style={
          Object {
            "color": "#ffffff",
            "fontFamily": "SourceSansPro-Regular",
            "fontSize": 16,
            "fontStyle": "normal",
            "fontWeight": "normal",
            "lineHeight": 24,
            "paddingTop": 15,
            "textAlign": "center",
            "textAlignVertical": "center",
            "textTransform": "none",
          }
        }
      >
        We want to help you take this Step of Faith! In order to set a reminder we need to be able to send you notifications.
      </Text>
    </View>
    <View
      style={
        Array [
          Object {},
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          },
        ]
      }
    >
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#3CC8E6",
            "borderRadius": 50,
            "height": 48,
            "justifyContent": "center",
            "margin": 8,
            "opacity": 1,
            "width": 680,
          }
        }
        testID="AllowButton"
      >
        <Text
          style={
            Array [
              Object {
                "color": "#ffffff",
                "fontFamily": "SourceSansPro-Regular",
                "fontSize": 14,
                "fontStyle": "normal",
                "fontWeight": "bold",
                "letterSpacing": 1,
                "lineHeight": 18,
                "textAlign": "center",
                "textAlignVertical": "center",
                "textTransform": "uppercase",
              },
              Object {
                "color": "#ffffff",
                "fontFamily": "SourceSansPro-Regular",
                "fontSize": 14,
                "fontStyle": "normal",
                "fontWeight": "bold",
                "letterSpacing": 1.5,
                "lineHeight": 18,
                "textAlignVertical": "center",
                "textTransform": "uppercase",
              },
            ]
          }
        >
          ALLOW NOTIFICATIONS
        </Text>
      </View>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "transparent",
            "borderColor": "#3CC8E6",
            "borderRadius": 50,
            "borderWidth": 1,
            "height": 48,
            "justifyContent": "center",
            "margin": 8,
            "opacity": 1,
            "paddingHorizontal": 20,
            "paddingVertical": 10,
            "width": 680,
          }
        }
        testID="NotNowButton"
      >
        <Text
          style={
            Array [
              Object {
                "color": "#ffffff",
                "fontFamily": "SourceSansPro-Regular",
                "fontSize": 14,
                "fontStyle": "normal",
                "fontWeight": "bold",
                "letterSpacing": 1,
                "lineHeight": 18,
                "textAlign": "center",
                "textAlignVertical": "center",
                "textTransform": "uppercase",
              },
              Object {
                "color": "#ffffff",
                "fontFamily": "SourceSansPro-Regular",
                "fontSize": 14,
                "fontStyle": "normal",
                "fontWeight": "bold",
                "letterSpacing": 1.5,
                "lineHeight": 18,
                "textAlignVertical": "center",
                "textTransform": "uppercase",
              },
            ]
          }
        >
          NOT NOW
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      Array [
        Object {},
        Object {
          "flex": 0.3,
        },
      ]
    }
  />
</View>
`;
